# intents-ark

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TEST_SWAP.md  build.sh  test-storage-deposit.json  test-swap-usdc-wnear.json  test-withdraw-wnear.json
intents-contract/: Cargo.toml  build.sh  rust-toolchain.toml
intents-contract/src/: admin.rs  lib.rs  lib.rs.backup  types.rs
near-intents-reference/: solver-relay-examples.md
src/: crypto.rs  lib.rs  main.rs  near_tx.rs
tests/: near_tx_integration.rs
